[gd_scene load_steps=7 format=3 uid="uid://blvbbujltlmrb"]

[ext_resource type="Script" uid="uid://bmtdchgl2tvxe" path="res://instances/users/pnl_user_games.gd" id="1_06iyg"]
[ext_resource type="Texture2D" uid="uid://dqxomv5pykt6i" path="res://ui/icons/bootstrap_icons/search-heart.svg" id="2_p2674"]
[ext_resource type="Texture2D" uid="uid://kxiiuf0d0kip" path="res://ui/icons/bootstrap_icons/plus-circle.svg" id="3_gyx6x"]
[ext_resource type="PackedScene" uid="uid://l2xg7yj7bfhe" path="res://instances/entries/entry_game_list.tscn" id="4_0jmle"]
[ext_resource type="PackedScene" uid="uid://d0cdydbgdy7ob" path="res://lib/games_info/pnl_steam_app_info.tscn" id="5_wqyhx"]
[ext_resource type="PackedScene" uid="uid://dxohy88odqn5f" path="res://lib/games_info/pnl_itchio_app_info.tscn" id="6_r3jb4"]

[node name="pnl_user_games" type="PanelContainer"]
offset_right = 1097.0
offset_bottom = 638.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 4.0
script = ExtResource("1_06iyg")

[node name="split" type="HSplitContainer" parent="."]
layout_mode = 2

[node name="vb_games" type="VBoxContainer" parent="split"]
layout_mode = 2
size_flags_horizontal = 3

[node name="lb" type="Label" parent="split/vb_games"]
layout_mode = 2
text = "Games"
horizontal_alignment = 1

[node name="sep" type="HSeparator" parent="split/vb_games"]
layout_mode = 2

[node name="hb" type="HBoxContainer" parent="split/vb_games"]
layout_mode = 2
size_flags_vertical = 3

[node name="vb_steam" type="VBoxContainer" parent="split/vb_games/hb"]
layout_mode = 2
size_flags_horizontal = 3

[node name="hb_search" type="HBoxContainer" parent="split/vb_games/hb/vb_steam"]
layout_mode = 2

[node name="ln_add_steam_app_id" type="LineEdit" parent="split/vb_games/hb/vb_steam/hb_search"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "steam app id or url"

[node name="btn_steam_get_info" type="Button" parent="split/vb_games/hb/vb_steam/hb_search"]
unique_name_in_owner = true
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
size_flags_vertical = 4
icon = ExtResource("2_p2674")
text_overrun_behavior = 3
icon_alignment = 1
expand_icon = true

[node name="btn_steam_add_game" type="Button" parent="split/vb_games/hb/vb_steam/hb_search"]
unique_name_in_owner = true
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
size_flags_vertical = 4
icon = ExtResource("3_gyx6x")
text_overrun_behavior = 3
icon_alignment = 1
expand_icon = true

[node name="pnl" type="PanelContainer" parent="split/vb_games/hb/vb_steam"]
layout_mode = 2
size_flags_vertical = 3

[node name="scr" type="ScrollContainer" parent="split/vb_games/hb/vb_steam/pnl"]
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 0

[node name="vb_steam_app_list" type="VBoxContainer" parent="split/vb_games/hb/vb_steam/pnl/scr"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="entry_game_list" parent="split/vb_games/hb/vb_steam/pnl/scr/vb_steam_app_list" instance=ExtResource("4_0jmle")]
layout_mode = 2

[node name="vb_itch" type="VBoxContainer" parent="split/vb_games/hb"]
layout_mode = 2
size_flags_horizontal = 3

[node name="hb_search" type="HBoxContainer" parent="split/vb_games/hb/vb_itch"]
layout_mode = 2

[node name="ln_add_itch_io_link" type="LineEdit" parent="split/vb_games/hb/vb_itch/hb_search"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "itch.io link"

[node name="btn_itchio_get_info" type="Button" parent="split/vb_games/hb/vb_itch/hb_search"]
unique_name_in_owner = true
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
size_flags_vertical = 4
icon = ExtResource("2_p2674")
text_overrun_behavior = 3
icon_alignment = 1
expand_icon = true

[node name="btn_itchio_add_game" type="Button" parent="split/vb_games/hb/vb_itch/hb_search"]
unique_name_in_owner = true
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
size_flags_vertical = 4
icon = ExtResource("3_gyx6x")
text_overrun_behavior = 3
icon_alignment = 1
expand_icon = true

[node name="pnl" type="PanelContainer" parent="split/vb_games/hb/vb_itch"]
layout_mode = 2
size_flags_vertical = 3

[node name="scr" type="ScrollContainer" parent="split/vb_games/hb/vb_itch/pnl"]
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 0

[node name="vb_itch_app_list" type="VBoxContainer" parent="split/vb_games/hb/vb_itch/pnl/scr"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="entry_game_list" parent="split/vb_games/hb/vb_itch/pnl/scr/vb_itch_app_list" instance=ExtResource("4_0jmle")]
layout_mode = 2

[node name="tab_game_info" type="TabContainer" parent="split"]
unique_name_in_owner = true
custom_minimum_size = Vector2(480, 0)
layout_mode = 2
current_tab = 0
tabs_visible = false

[node name="pnl_steam_app_info" parent="split/tab_game_info" instance=ExtResource("5_wqyhx")]
unique_name_in_owner = true
layout_mode = 2
metadata/_tab_index = 0

[node name="pnl_itchio_app_info" parent="split/tab_game_info" instance=ExtResource("6_r3jb4")]
unique_name_in_owner = true
visible = false
layout_mode = 2
metadata/_tab_index = 1

[connection signal="text_submitted" from="split/vb_games/hb/vb_steam/hb_search/ln_add_steam_app_id" to="." method="_on_ln_add_steam_app_id_text_submitted"]
[connection signal="pressed" from="split/vb_games/hb/vb_steam/hb_search/btn_steam_get_info" to="." method="_on_btn_steam_get_info_pressed"]
[connection signal="pressed" from="split/vb_games/hb/vb_steam/hb_search/btn_steam_add_game" to="." method="_on_btn_steam_add_game_pressed"]
[connection signal="text_submitted" from="split/vb_games/hb/vb_itch/hb_search/ln_add_itch_io_link" to="." method="_on_ln_add_itch_io_link_text_submitted"]
[connection signal="pressed" from="split/vb_games/hb/vb_itch/hb_search/btn_itchio_get_info" to="." method="_on_btn_itchio_get_info_pressed"]
[connection signal="pressed" from="split/vb_games/hb/vb_itch/hb_search/btn_itchio_add_game" to="." method="_on_btn_itchio_add_game_pressed"]
